# yak-tracker

./: .gitignore  CHANGELOG.md  PLAN.md  README.md  pyproject.toml
.github/workflows/: ci.yml
examples/: config.toml
tests/: __init__.py  test_backends.py  test_blame.py  test_cli.py  test_cli_config.py  test_cli_demo.py  test_cli_post.py  test_cli_redact.py  test_cli_saga.py  test_cli_score.py  test_cli_sessions.py  test_cli_today.py  test_cli_today_export.py  test_cli_today_json.py  test_cli_week.py  test_config.py  test_export.py  test_fish_nushell_collectors.py  test_git_collector.py  test_narrate.py  test_post.py  test_redact.py  test_saga.py  test_sample.py  test_score.py  test_serialize.py  test_sessionize.py  test_shell_collector.py  test_tree.py  test_tui.py  test_week.py
tests/fixtures/: bash_history_plain  bash_history_timestamped  fish_history  nu_history.txt  zsh_history  zsh_yakshave
yak_tracker/: __init__.py  blame.py  cli.py  config.py  export.py  models.py  narrate.py  post.py  redact.py  render.py  saga.py  sample.py  score.py  serialize.py  sessionize.py  tree.py  tui.py  week.py
yak_tracker/collectors/: __init__.py  fish.py  git.py  nushell.py  shell.py
